OTP Email Verfication

--- a/pom.xml
+++ b/pom.xml
@@ -30,12 +30,17 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		<!--Mail Verfication-->
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-
 		<!-- Spring Boot Initialization -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
